text align justify

--- a/single.html
+++ b/single.html
@@ -40,13 +40,18 @@
       <div class="four spacing"></div>
       <div class="row">
           <div class="large-8 large-centered columns">
-            <p>We understand the urgency & strict turnaround timelines when it comes to recruiting candidates at Middle to Junior level management. Our team thrives on our agile approach, targeted search and a razor-sharp focus on identifying the most suitable talent for our clients.</p> <p>We focus on understanding the business needs of our clients, evaluating the available talent pool within the same or allied industries and presenting the most suitable candidates who are busy being good at what they do.<br>
+            <p>We understand the urgency & strict turnaround timelines when it comes to recruiting candidates at Middle to Junior level management. Our team thrives on our agile approach, targeted search and a razor-sharp focus on identifying the most suitable talent for our clients.</p> 
+
+
+            <p>We focus on understanding the business needs of our clients, evaluating the available talent pool within the same or allied industries and presenting the most suitable candidates who are busy being good at what they do.
+                <br>
  
-As a practice, we engage with candidates across various industries on a daily basis to build long term relationships. We take pride in having a strong network of top qualified candidates in our database and thus improving our turnaround time for any search assignment.
- <br>
-We have successfully partnered with corporates to work on roles that were tough, required niche skills or specific sectoral experience. We endeavor to build successful teams for our clients and pave the way for mutual success and growth. While we are known for achieving results quickly, we never compromise on the quality of work we do.<br>
+            As a practice, we engage with candidates across various industries on a daily basis to build long term relationships. We take pride in having a strong network of top qualified candidates in our database and thus improving our turnaround time for any search assignment.
+            <br>
+            We have successfully partnered with corporates to work on roles that were tough, required niche skills or specific sectoral experience. We endeavor to build successful teams for our clients and pave the way for mutual success and growth. While we are known for achieving results quickly, we never compromise on the quality of work we do.
+            <br>
  
-As a team, we firmly believe that “Quality is never an accident. It is always the result of intelligent effort.”
+            As a team, we firmly believe that “Quality is never an accident. It is always the result of intelligent effort.”
             </p>
              <p class="action-hint">
                         <a class="scroll-down" href="board.html"> 
