--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
                 </div>
                 </div>
 <div class="full_test">
-<div class="carousel"  data-flickity='{ "autoPlay": true, "fade": true, "prevNextButtons": false }'>
-    <div class="carousel-cell"><!--<br> <h2><a href="#" >A multi billion dollar health care group</a></h2>--><img src="images/svg/folder.png">
+<div class="carousel"  data-flickity='{"autoPlay": true, "fade": true, "prevNextButtons": false}'>
+    <div class="carousel-cell carousel-cell--cell1"><!--<br> <h2><a href="#" >A multi billion dollar health care group</a></h2>--><img src="images/svg/folder.png">
                 <p> " Peergrowth has helped us onboard some very key team members for the corporate team. As a service Peergrowth evaluates the organisations needs very objectively to ensure we get the best return for our efforts. They always ensure a very clear understanding of the business and competencies required for the roles. Despite some challenging roles and timelines at hand, the sourcing and interview process has always been seamless. Their partners are extremely sharp and have a long-term vison when recruiting candidates. " <div class="one spacing"></div><span> - Group GM HR, Reputed multi-billion dollar Healthcare Group. </span> </p></div>
-    <div class="carousel-cell" ><!--<br><h2><a href="#">A massive family conglomerate</a></h2>--><img src="images/svg/business.png">
-                <p> "I find Abhishek to be very engaging, dependable and high in integrity, he works with a wide network of well-qualified individuals across a range of job disciplines. What I value the most is that he always listens but is never afraid to push back when he feels that someone is the right fit for our business. Having a partnership with Abhishek and Peergrowth has significantly improved our time-to-hire on key roles over the past six months. He is very effective at his job and it's a pleasure to recommend him as an accomplished professional." <div class="one spacing"></div><span> - CHRO, Diversified UAE based conglomerate.</span> </p></div>
-    <div class="carousel-cell" ><!--<br><h2><a href="#s">A reputed Avation group</a></h2>--><img src="images/svg/plane.png">
+    <div class="carousel-cell carousel-cell--cell1" ><!--<br><h2><a href="#">A massive family conglomerate</a></h2>--><img src="images/svg/business.png">
+                <p> "I find Abhishek to be very engaging, dependable and high in integrity, he works with a wide network of well-qualified individuals across a range of job disciplines. What I value the most is that he always listens but is never afraid to push back when he feels that someone is the right fit for our business. Having a partnership with Abhishek and Peergrowth has significantly improved our <br> time-to-hire on key roles over the past six months. He is very effective at his job and it's a pleasure to recommend him as an accomplished professional." <div class="one spacing"></div><span> - CHRO, Diversified UAE based conglomerate.</span> </p></div>
+    <div class="carousel-cell carousel-cell--cell1" ><!--<br><h2><a href="#s">A reputed Avation group</a></h2>--><img src="images/svg/plane.png">
                 <p> " Peergrowth has provided us with a tailored recruitment service through comprehensive understanding of our culture and service needs. This personalised approach goes a long way in meeting our needs and successfully identified people for our organisation. " <div class="one spacing"></div><span> - CHRO, Global aviation firm.</span></p></div>
 </div>
 </div>
@@ -603,7 +603,7 @@
                     </div>
                     <div class="large-6 columns">
                         <h2 class="colored-title">We Brainstorm</h2>
-                        <p>
+                        <p class="how-p">
                             The beauty of churning out a well-formed idea, begins with encouraging several ideas at the table. Each idea is dissected, filtered, refined and brainstormed to the level of utmost perfection.
                         </p>
                         <div class="four spacing"></div>
@@ -612,7 +612,7 @@
                 <div class="row">
                     <div class="large-6 columns">
                         <h2 class="colored-title">We are relentless</h2>
-                        <p>
+                        <p class="how-p">
                             Our strength lies in our relentlessness. We as a team do not give up in finding the best talent from across the globe - and our ‘never say die’ attitude has ensured several companies around the world celebrate the success of our relentlessness. 
                         </p>
                         <div class="spacing"></div>
@@ -629,7 +629,7 @@
                     </div>
                     <div class="large-6 columns">
                         <h2 class="colored-title">We are focussed</h2>
-                        <p>
+                        <p class="how-p">
                             We employ great focus and attention to detail in sieving through a pool of talent, and ensure that the prerequisites are not only matched, but are surpassed. Our unflinching focus towards finding the befitting match, is an attitude that keeps us ticking.
                         </p>
                         <div class="spacing"></div>
@@ -638,7 +638,7 @@
                 <div class="row">
                     <div class="large-6 columns">
                         <h2 class="colored-title">We connect</h2>
-                        <p>
+                        <p class="how-p">
                             Our network is global and so is our approach. We believe in the beauty and unlimited prowess of sound networking and ensure that the benefits that we reap out of our far-reaching network are priceless.
                         </p>
                         <div class="spacing"></div>
@@ -655,7 +655,7 @@
                     </div>
                     <div class="large-6 columns">
                         <h2 class="colored-title">We collaborate</h2>
-                        <p>
+                        <p class="how-p">
                             The power of synergising lies in its latent inclusivity and its apparent diversity. While we actively collaborate with several organisations and individuals, what sets us apart is our inherent drive to collaborate and bring forth the best.
                         </p>
                         <div class="spacing"></div>
