--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
 <div class="full_test">
 <div class="carousel"  data-flickity='{"autoPlay": true, "fade": true, "prevNextButtons": false}'>
     <div class="carousel-cell carousel-cell--cell1"><!--<br> <h2><a href="#" >A multi billion dollar health care group</a></h2>--><img src="images/svg/folder.png">
-                <p> " Peergrowth has helped us onboard some very key team members for the corporate team. As a service Peergrowth evaluates the organisations needs very objectively to ensure we get the best return for our efforts. They always ensure a very clear understanding of the business and competencies required for the roles. Despite some challenging roles and timelines at hand, the sourcing and interview process has always been seamless. Their partners are extremely sharp and have a long-term vison when recruiting candidates. " <div class="one spacing"></div><span> - Group GM HR, Reputed multi-billion dollar Healthcare Group. </span> </p></div>
+                <p> " Peergrowth has helped us onboard some very key team members for the corporate team. As a service Peergrowth evaluates the organisations needs very objectively to ensure we get the best return for our efforts. They always ensure a very clear understanding of the business and competencies required for the roles. Despite some challenging roles and timelines at hand, the sourcing and interview process has always been seamless. Their partners are extremely sharp and have a long-term vision when recruiting candidates. " <div class="one spacing"></div><span> - Group GM HR, Reputed multi-billion dollar Healthcare Group. </span> </p></div>
     <div class="carousel-cell carousel-cell--cell1" ><!--<br><h2><a href="#">A massive family conglomerate</a></h2>--><img src="images/svg/business.png">
                 <p> "I find Abhishek to be very engaging, dependable and high in integrity, he works with a wide network of well-qualified individuals across a range of job disciplines. What I value the most is that he always listens but is never afraid to push back when he feels that someone is the right fit for our business. Having a partnership with Abhishek and Peergrowth has significantly improved our time-to-hire on key roles over the past six months. He is very effective at his job and it's a pleasure to recommend him as an accomplished professional." <div class="one spacing"></div><span> - CHRO, Diversified UAE based conglomerate.</span> </p></div>
     <div class="carousel-cell carousel-cell--cell1" ><!--<br><h2><a href="#s">A reputed Avation group</a></h2>--><img src="images/svg/plane.png">
-                <p> " Peergrowth has provided us with a tailored recruitment service through comprehensive understanding of our culture and service needs. This personalised approach goes a long way in meeting our needs and successfully identified people for our organisation. " <div class="one spacing"></div><span> - CHRO, Global aviation firm.</span></p></div>
+                <p> " Peergrowth has provided us with a tailored recruitment service through comprehensive understanding of our culture and service needs. This personalised approach goes a long way in meeting our needs and they have been successful in identifying people for our organization. " <div class="one spacing"></div><span> - CHRO, Global aviation firm.</span></p></div>
 </div>
 </div>
 
@@ -296,7 +296,7 @@
                             </div>
 
                             <div class='slidebox' style=''>
-                                <a href="team3.html"><img src="images/%40stock/team3.jfif" alt=""></a>
+                                <a href="team3.html"><img src="images/%40stock/team3.png" alt=""></a>
                                 <p class="big-letter">
                                     
                                 </p>
@@ -312,7 +312,7 @@
                             </div>
 
                             <div class='slidebox' style=''>
-                                <a href="team4.html"><img src="images/%40stock/team4.jpg" alt=""></a>
+                                <a href="team4.html"><img src="images/%40stock/team4.png" alt=""></a>
                                 <p class="big-letter">
                                     
                                 </p>
@@ -589,7 +589,8 @@
                 <div class="row">
                     <div class="large-8 columns" style="background-color: rgba(2, 119, 184, 0.3);">
                         <h2>How</h2>
-                        <p>We build brands people trust. Our values and ideas bring people and brands together.</p>
+                        <!--<p>We build brands people trust. Our values and ideas bring people and brands together.</p>-->
+                        <p>Our relationship oriented approach, coupled with intelligent market research helps us in finding the right fit for our clients.</p>
                     </div>
                 </div>
             </div>
@@ -603,8 +604,11 @@
                     </div>
                     <div class="large-6 columns">
                         <h2 class="colored-title">We Brainstorm</h2>
-                        <p class="how-p">
+                        <!--<p class="how-p">
                             The beauty of churning out a well-formed idea, begins with encouraging several ideas at the table. Each idea is dissected, filtered, refined and brainstormed to the level of utmost perfection.
+                        </p>-->
+                        <p class="how-p">
+                            Not every role is similar and hence every search is given a fresh thought. With our unique search model, we harness primary & industry knowledge to bring the best candidates for the role.
                         </p>
                         <div class="four spacing"></div>
                     </div>
@@ -612,8 +616,11 @@
                 <div class="row">
                     <div class="large-6 columns">
                         <h2 class="colored-title">We are relentless</h2>
-                        <p class="how-p">
+                        <!--<p class="how-p">
                             Our strength lies in our relentlessness. We as a team do not give up in finding the best talent from across the globe - and our ‘never say die’ attitude has ensured several companies around the world celebrate the success of our relentlessness. 
+                        </p>-->
+                        <p class="how-p">
+                             Our USP is our ability to not give up till the job is done. We do not believe that any role is impossible to close and we like gaining new experiences with every search.
                         </p>
                         <div class="spacing"></div>
                     </div>
@@ -628,9 +635,12 @@
                         <div class="four spacing"></div>
                     </div>
                     <div class="large-6 columns">
-                        <h2 class="colored-title">We are focussed</h2>
-                        <p class="how-p">
+                        <h2 class="colored-title">We are focused</h2>
+                        <!--<p class="how-p">
                             We employ great focus and attention to detail in sieving through a pool of talent, and ensure that the prerequisites are not only matched, but are surpassed. Our unflinching focus towards finding the befitting match, is an attitude that keeps us ticking.
+                        </p>-->
+                        <p class="how-p">
+                           Our tailor made approach to every assignment helps us in sourcing talent with an undivided attention to ensure that the prerequisites are not only matched, but are surpassed. 
                         </p>
                         <div class="spacing"></div>
                     </div>
@@ -655,8 +665,11 @@
                     </div>
                     <div class="large-6 columns">
                         <h2 class="colored-title">We collaborate</h2>
-                        <p class="how-p">
+                        <!--<p class="how-p">
                             The power of synergising lies in its latent inclusivity and its apparent diversity. While we actively collaborate with several organisations and individuals, what sets us apart is our inherent drive to collaborate and bring forth the best.
+                        </p>-->
+                        <p class="how-p">
+                            We take pride in having transparent, constructive & meaningful communication with our clients and candidates to achieve win-win situations for all stakeholders involved.
                         </p>
                         <div class="spacing"></div>
                     </div>
@@ -758,7 +771,7 @@
                 <div class="row">
                     <div class="large-8 columns" style="background-color: rgba(2, 119, 184, 0.3);">
                         <h2>Contact</h2>
-                        <p>We always want new and challenging ideas and projects.</p>
+                        <p>We would love to hear from you.</p>
                     </div>
                 </div>
             </div>
@@ -774,9 +787,9 @@
                                 Dubai, United Arab Emirates
                             </p>
                             <div class="two spacing"></div>
-                            <p>
+                            <!--<p>
                                 <a class="button boxed black google-map-button" target="_blank" href="https://www.google.com/maps/dir/Current+Location/120+K+Street+Sacramento+CA+95814"><i class="icon-basic-geolocalize-01"></i>Open in Google Maps</a>
-                            </p>
+                            </p>-->
                             <div class="four spacing"></div>
                         </div>
                     </div>
