description for the team section was added with a expand button linked to each team member

--- a/team3.html
+++ b/team3.html
@@ -45,7 +45,7 @@ Bhavna believes in the power of hard work and perseverance. When not working, sh
 
 </div>
 <div class="large-6 columns">
-<img src="images/%40stock/team3.jfif">
+<img src="images/%40stock/team3.png">
 </div>
 
 </div>
