--- a/team4.html
+++ b/team4.html
@@ -45,7 +45,7 @@ family. </p>
 <ul class="socials"> <li><a href="https://www.linkedin.com/in/elizabeth-james-3097a5145/" target="_blank"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
 </div>
 <div class="large-6 columns">
-<img src="images/%40stock/team4.jpg">
+<img src="images/%40stock/team4.png">
 </div>
 
 </div>
