--- a/index.html
+++ b/index.html
@@ -369,7 +369,8 @@
                     <div class="large-6 columns">
                         <h2 class="colored-title">Abhishek Singh</h2>
                         <p class="how-p">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a lorem ut elit ornare ullamcorper ac ut lorem. Maecenas imperdiet iaculis justo, consectetur tincidunt ligula ornare eu. Suspendisse potenti. Nulla in tempus sapien, at venenatis turpis. Mauris non erat massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean placerat ornare lacus. Sed scelerisque ut odio et placerat. Duis in pharetra purus. Vestibulum ut ipsum blandit lorem cursus convallis.
+                            Abhishek is the Chief Executive Officer of Peergrowth, a trusted management consulting firm based in Dubai.
+            Abhishek has rich experience in leadership hiring both as an Executive search professional and an in-house recruiter focusing on Europe, Middle East & India markets. He has been instrumental in closing critical roles across Real Estate, Banking, Financial Services, Hospitality & Consumer with a keen interest in Education & Healthcare.
                         </p>
                         <p class="how-p">
                             <ul class="socials">
@@ -394,7 +395,7 @@
                     <div class="large-6 columns">
                         <h2 class="colored-title">Karun Mehra</h2>
                          <p class="how-p">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a lorem ut elit ornare ullamcorper ac ut lorem. Maecenas imperdiet iaculis justo, consectetur tincidunt ligula ornare eu. Suspendisse potenti. Nulla in tempus sapien, at venenatis turpis. Mauris non erat massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean placerat ornare lacus. Sed scelerisque ut odio et placerat. Duis in pharetra purus. Vestibulum ut ipsum blandit lorem cursus convallis.
+                            Karun is a graduate from Christ University Bangalore, where he has completed his BBA Finance and Accountancy in 2017. He is also a qualified chartered accountant from the Association of Chartered Certified Accountants (ACCA) UK. In his college days, he led his department in various Business Fest’s and won a series of accolades across India from prestigious institutions such as St. Xavier’s Kolkata and IIM Indore. He was also a delegate represent in the MUN circuit in India. 
                         </p>
                         <p class="how-p">
                               <ul class="socials">
@@ -419,7 +420,7 @@
                     <div class="large-6 columns">
                         <h2 class="colored-title">Bhavna Kapoor</h2>
                          <p class="how-p">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a lorem ut elit ornare ullamcorper ac ut lorem. Maecenas imperdiet iaculis justo, consectetur tincidunt ligula ornare eu. Suspendisse potenti. Nulla in tempus sapien, at venenatis turpis. Mauris non erat massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean placerat ornare lacus. Sed scelerisque ut odio et placerat. Duis in pharetra purus. Vestibulum ut ipsum blandit lorem cursus convallis.
+                            Bhavna is an enthusiastic recruiter who believes that at the heart of performance and success of any team or organization, lies the quality of its people. In her 17 years of experience, she has worked across India , Singapore and UAE with diverse nationalities and cultures. She has an innate ability to build and nurture relationships which have contributed to her learning & success. Bhavna is an Associate CIPD and a post graduate in Human Resource Management from Xavier’s Labour Relations Institute ( XLRI- Jamshedpur) in India.
                         </p>
                         <p class="how-p">
                              <ul class="socials">
@@ -445,7 +446,10 @@
                     <div class="large-6 columns">
                         <h2 class="colored-title">Elizabeth James</h2>
                          <p class="how-p">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a lorem ut elit ornare ullamcorper ac ut lorem. Maecenas imperdiet iaculis justo, consectetur tincidunt ligula ornare eu. Suspendisse potenti. Nulla in tempus sapien, at venenatis turpis. Mauris non erat massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean placerat ornare lacus. Sed scelerisque ut odio et placerat. Duis in pharetra purus. Vestibulum ut ipsum blandit lorem cursus convallis.
+                            Born in God's own country and raised in Dubai, Elizabeth finished her high school in Dubai and then
+                            studied English literature in Kerala. But soon she realized the land of opportunities was where she
+                            wanted to be. Back in Dubai, she completed her master's degree in Human resource and then joined
+                            team Peergrowth as an intern.
                         </p>
                         <p class="how-p">
                            <ul class="socials">                                       
@@ -471,7 +475,10 @@
                         <h2 class="colored-title">Elizabeth James</h2>
                         <p class="how-p">
                             <p class="how-p">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a lorem ut elit ornare ullamcorper ac ut lorem. Maecenas imperdiet iaculis justo, consectetur tincidunt ligula ornare eu. Suspendisse potenti. Nulla in tempus sapien, at venenatis turpis. Mauris non erat massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean placerat ornare lacus. Sed scelerisque ut odio et placerat. Duis in pharetra purus. Vestibulum ut ipsum blandit lorem cursus convallis.
+                            Born in God's own country and raised in Dubai, Elizabeth finished her high school in Dubai and then
+                            studied English literature in Kerala. But soon she realized the land of opportunities was where she
+                            wanted to be. Back in Dubai, she completed her master's degree in Human resource and then joined
+                            team Peergrowth as an intern.
                         </p>
                             <ul class="socials">
                                         
