added titles to the team members

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 
                     <div class="large-6 columns">
                         <h2 class="colored-title">Bhavna Kapoor</h2>
-                        <p class="colored-title" style="font-size:18px !important;"></p>
+                        <p class="colored-title" style="font-size:18px !important;">Engagement Manager</p>
                          <p class="how-p">
                             Bhavna is an enthusiastic recruiter who believes that at the heart of performance and success of any team or organization, lies the quality of its people. In her 17 years of experience, she has worked across India , Singapore and UAE with diverse nationalities and cultures. She has an innate ability to build and nurture relationships which have contributed to her learning & success. Bhavna is an Associate CIPD and a post graduate in Human Resource Management from Xavier’s Labour Relations Institute ( XLRI- Jamshedpur) in India.
                         </p>
@@ -448,7 +448,7 @@
                     
                     <div class="large-6 columns">
                         <h2 class="colored-title">Elizabeth James</h2>
-                        <p class="colored-title" style="font-size:18px !important;"></p>
+                        <p class="colored-title" style="font-size:18px !important;">Research Analyst</p>
                          <p class="how-p">
                             Born in God's own country and raised in Dubai, Elizabeth finished her high school in Dubai and then
                             studied English literature in Kerala. But soon she realized the land of opportunities was where she
@@ -477,7 +477,7 @@
                     </div>
                     <div class="large-6 columns">
                         <h2 class="colored-title">Elizabeth James</h2>
-                        <p class="colored-title" style="font-size:18px !important;"></p>
+                        <p class="colored-title" style="font-size:18px !important;">Research Analyst</p>
                         <p class="how-p">
                             <p class="how-p">
                             Born in God's own country and raised in Dubai, Elizabeth finished her high school in Dubai and then
