we research was updated and the designations for the team pages was added

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                     </div>
                     <div class="large-6 columns">
                         <h2 class="colored-title">Abhishek Singh</h2>
-                        <p class="colored-title" style="font-size:18px !important;">CEO</p>
+                        <h6 style="color: #2275B8">CEO</h6>
                         <p class="how-p">
                             Abhishek is the Chief Executive Officer of Peergrowth, a trusted management consulting firm based in Dubai.
             Abhishek has rich experience in leadership hiring both as an Executive search professional and an in-house recruiter focusing on Europe, Middle East & India markets. He has been instrumental in closing critical roles across Real Estate, Banking, Financial Services, Hospitality & Consumer with a keen interest in Education & Healthcare.
@@ -389,13 +389,13 @@
                 <div class="row">
 
                      <div class="large-6 columns">
-                        <img src="images/%40stock/team2_2.jpg" alt="" style="margin-left: 40%;">
+                        <a href="team2.html"><img src="images/%40stock/team2_2.jpg" alt="" style="margin-left: 40%;"></a>
                         <div class="four spacing"></div>
                     </div>
 
                     <div class="large-6 columns">
                         <h2 class="colored-title">Karun Mehra</h2>
-                        <p class="colored-title" style="font-size:18px !important;">SENIOR ASSOCIATE</p>
+                        <h6 style="color: #2275B8">SENIOR ASSOCIATE</h6>
                         <p class="how-p">
                             Karun is a graduate from Christ University Bangalore, where he has completed his BBA Finance and Accountancy in 2017. He is also a qualified chartered accountant from the Association of Chartered Certified Accountants (ACCA) UK. In his college days, he led his department in various Business Fest’s and won a series of accolades across India from prestigious institutions such as St. Xavier’s Kolkata and IIM Indore. He was also a delegate represent in the MUN circuit in India. 
                         </p>
@@ -415,13 +415,13 @@
                 <div class="row">
 
                     <div class="large-6 columns">
-                        <img src="images/%40stock/team3_3.jpg" alt="" style="margin-left: 40%;">
+                        <a href="team3.html"><img src="images/%40stock/team3_3.jpg" alt="" style="margin-left: 40%;"></a>
                         <div class="four spacing"></div>
                     </div>
 
                     <div class="large-6 columns">
                         <h2 class="colored-title">Bhavna Kapoor</h2>
-                        <p class="colored-title" style="font-size:18px !important;">Engagement Manager</p>
+                        <h6 style="color: #2275B8">Engagement Manager</h6>
                          <p class="how-p">
                             Bhavna is an enthusiastic recruiter who believes that at the heart of performance and success of any team or organization, lies the quality of its people. In her 17 years of experience, she has worked across India , Singapore and UAE with diverse nationalities and cultures. She has an innate ability to build and nurture relationships which have contributed to her learning & success. Bhavna is an Associate CIPD and a post graduate in Human Resource Management from Xavier’s Labour Relations Institute ( XLRI- Jamshedpur) in India.
                         </p>
@@ -442,13 +442,13 @@
                 <div class="row">
 
                     <div class="large-6 columns">
-                        <img src="images/%40stock/team4_4.jpg" alt="" style="margin-left: 40%;">
+                        <a href="team4.html"><img src="images/%40stock/team4_4.jpg" alt="" style="margin-left: 40%;"></a>
                         <div class="four spacing"></div>
                     </div>
                     
                     <div class="large-6 columns">
                         <h2 class="colored-title">Elizabeth James</h2>
-                        <p class="colored-title" style="font-size:18px !important;">Research Analyst</p>
+                        <h6 style="color: #2275B8">Research Analyst</h6>
                          <p class="how-p">
                             Born in God's own country and raised in Dubai, Elizabeth finished her high school in Dubai and then
                             studied English literature in Kerala. But soon she realized the land of opportunities was where she
@@ -472,12 +472,12 @@
 
                   <div class="row">
                      <div class="large-6 columns">
-                        <img src="images/%40stock/team4_4.jpg" alt="" style="margin-left: 40%;">
+                        <a href="team4.html"><img src="images/%40stock/team4_4.jpg" alt="" style="margin-left: 40%;"></a>
                         <div class="four spacing"></div>
                     </div>
                     <div class="large-6 columns">
                         <h2 class="colored-title">Elizabeth James</h2>
-                        <p class="colored-title" style="font-size:18px !important;">Research Analyst</p>
+                       <h6 style="color: #2275B8">Research Analyst</h6>
                         <p class="how-p">
                             <p class="how-p">
                             Born in God's own country and raised in Dubai, Elizabeth finished her high school in Dubai and then
@@ -788,7 +788,7 @@
                             Our strength lies in our relentlessness. We as a team do not give up in finding the best talent from across the globe - and our ‘never say die’ attitude has ensured several companies around the world celebrate the success of our relentlessness. 
                         </p>-->
                         <p class="how-p">
-                              At Peergrowth, we ensure no stone is left unturned in sourcing the right candidate for our clients. Our dedicated research team drives market intelligence to map the market and establish connects for clients & candidates.
+                              We take pride in our capability to do mapping of potential talent from direct competition and allied industries. As a standard practice, our dedicated team of researchers do both primary and secondary research on industries and companies on a daily basis. This helps us to understand organization structures well and to learn who does what. This approach is what makes us different from others. Research has always been a core part of what we do.
                         </p>
                         <div class="spacing"></div>
                     </div>
