--- a/team4.html
+++ b/team4.html
@@ -29,6 +29,7 @@
             <div class="large-6 columns">
             <div class="team_text">
     <h2>Elizabeth James </h2>
+    <h6 style="color: #2275B8">Research Analyst</h6>
     <p>Born in God's own country and raised in Dubai, Elizabeth finished her high school in Dubai and then
 studied English literature in Kerala. But soon she realized the land of opportunities was where she
 wanted to be. Back in Dubai, she completed her master's degree in Human resource and then joined
