--- a/team2.html
+++ b/team2.html
@@ -29,6 +29,7 @@
             <div class="large-6 columns">
             <div class="team_text">
     <h2> Karun Mehra </h2>
+    <h6 style="color: #2275B8">SENIOR ASSOCIATE</h6>
     <p>Karun is a graduate from Christ University Bangalore, where he has completed his BBA Finance and Accountancy in 2017. He is also a qualified chartered accountant from the Association of Chartered Certified Accountants (ACCA) UK. In his college days, he led his department in various Business Fest’s and won a series of accolades across India from prestigious institutions such as St. Xavier’s Kolkata and IIM Indore. He was also a delegate represent in the MUN circuit in India. 
 Karun is an avid basketball player. He represented his school as the Sports Secretary and captained the basketball team as a CBSE Indian National Level player. Apart from Sports, he loves singing & playing the guitar. He has had the honor of performing for Padma Shri Malathi K Holla, India’s International Paralympian, who has won over 300 medals. 
 His love for networking has helped him grow into a Senior Associate with Peergrowth today. </p>
