--- a/team3.html
+++ b/team3.html
@@ -29,6 +29,7 @@
             <div class="large-6 columns">
             <div class="team_text">
     <h2> Bhavna Kapoor</h2>
+    <h6 style="color: #2275B8">Engagement Manager</h6>
     <p>Bhavna is an enthusiastic recruiter who believes that at the heart of performance and success of any team or organization, lies the quality of its people. In her 17 years of experience, she has worked across India , Singapore and UAE with diverse nationalities and cultures. She has an innate ability to build and nurture relationships which have contributed to her learning & success. Bhavna is an Associate CIPD and a post graduate in Human Resource Management from Xavier’s Labour Relations Institute ( XLRI- Jamshedpur) in India.
 
  
