--- a/team1.html
+++ b/team1.html
@@ -29,7 +29,7 @@
             <div class="large-6 columns">
             <div class="team_text">
     <h2> Abhishek Singh</h2>
-    <h6 style="color: #fff">CEO</h6>
+    <h6 style="color: #2275B8">CEO</h6>
             <p>Abhishek is the Chief Executive Officer of Peergrowth, a trusted management consulting firm based in Dubai.
             Abhishek has rich experience in leadership hiring both as an Executive search professional and an in-house recruiter focusing on Europe, Middle East & India markets. He has been instrumental in closing critical roles across Real Estate, Banking, Financial Services, Hospitality & Consumer with a keen interest in Education & Healthcare.
             As a corporate recruiter, Abhishek worked with a market leader for Luxury Real Estate Development based in Dubai. As a part of the Talent Acquisition team, he was responsible for Leadership & Mid-management hiring across businesses like Real Estate, Investments, Insurance, Retail, Hospitality & Industrial Catering.
