--- a/research.html
+++ b/research.html
@@ -47,7 +47,7 @@
              <p class="action-hint">
                         <a class="scroll-down" href="training.html"> 
                         <img src="images/svg/back123.png" style=" height: 30px;">
-                         Training and Development
+                         Learning and Development
                         </a>                     
                     </p>
                     
