--- a/single.html
+++ b/single.html
@@ -61,7 +61,7 @@
                     </p>
                      <p class="action-hint1">
                         <a class="scroll-down" href="training.html"> 
-                        Training and Development<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
+                        Learning and Development<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
                     </p>
           </div>
       </div>
