changed the contact to connect and changed the form boxes to look thicker

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             display: none;
         }
 
-
+       
 
     </style>
     <script>
@@ -986,7 +986,7 @@
                     </div>
                     <div class="large-4 columns">
                         <div class="contact-details wow slideInUp">
-                            <h3 class="colored-title">Contact</h3>
+                            <h3 class="colored-title">Connect</h3>
                             <p class="big-text"> <a href="tel:+971 (0) 4 2400 448">+971 (0) 4 2400 448</a></p>
                             <p class="big-text">
                                 <a href="mailto:info@peergrowth.net" title="business email">info@peergrowth.net</a>
