changed team bio

--- a/team1.html
+++ b/team1.html
@@ -30,11 +30,24 @@
             <div class="team_text">
     <h2> Abhishek Singh</h2>
     <h6 style="color: #2275B8">CEO</h6>
-            <p>Abhishek is the Chief Executive Officer of Peergrowth, a trusted management consulting firm based in Dubai.
-            Abhishek has rich experience in leadership hiring both as an Executive search professional and an in-house recruiter focusing on Europe, Middle East & India markets. He has been instrumental in closing critical roles across Real Estate, Banking, Financial Services, Hospitality & Consumer with a keen interest in Education & Healthcare.
-            As a corporate recruiter, Abhishek worked with a market leader for Luxury Real Estate Development based in Dubai. As a part of the Talent Acquisition team, he was responsible for Leadership & Mid-management hiring across businesses like Real Estate, Investments, Insurance, Retail, Hospitality & Industrial Catering.
-            Prior to venturing into Corporate Recruitment, Abhishek worked with a leading Executive search firm in the capacity of a Consultant & Practice Head. With a key focus on Business development & Client servicing, he worked on several CEO/CXO levels searches across industries. He is credited for doing successful placements at Director, Dean, Principal positions with various prestigious institutions across India and abroad. He started his career within Hospitality with Marriott International in Edinburgh, Scotland.
-            He has attended an Advanced Management Course at Judge Business School, Cambridge University. He also holds a Post-Graduate Diploma in Business Management from International Management Institute, Belgium and Bachelors in Hospitality and Restaurant management from Oxford Brookes University, Oxford, United Kingdom.</p>
+            <p>Abhishek comes from New Delhi, India. He thrives on building relationships and connecting with people from different backgrounds. He truly believes in - “a day without meeting people is a day gone wasted”. He comes with experience in leadership hiring both as an Executive search professional and an in-house recruiter focusing on Europe, Middle East & India markets. He has been instrumental in closing critical roles for multiple clients across industries.<br>
+
+ 
+
+            As a corporate recruiter, Abhishek worked with a market leader for Luxury Real Estate Development based in Dubai. As a part of the Talent Acquisition team, he was responsible for Leadership & Mid-management hiring across businesses like Real Estate, Investments, Insurance, Retail, Hospitality & Industrial Catering. Prior to venturing into Corporate Recruitment, Abhishek worked with a leading Executive search firm in the capacity of a Consultant & Practice Head. With a key focus on Business development & Client servicing, he worked on several CEO/CXO levels searches across industries. He is credited for doing successful placements at CEO/CXO levels with various industry leaders across MENA and Asia region. He started his career within Hospitality with Marriott International in Edinburgh, Scotland.<br>
+
+             
+
+            During weekends, he loves to find new places to try good food, read books or go out for a run.</p>
+
+            <br>
+            <h6 style="color: #eee">Education Qualification:</h6>
+            <p> - Advanced Management Course at Judge Business School, Cambridge University.<br>
+             - Post-Graduate Diploma in Business Management from International Management Institute, Belgium.<br> 
+             - Bachelors in Hospitality and Restaurant management from Oxford Brookes University, Oxford, United Kingdom.</p>
+             <br>
+            <h6 style="color: #eee">Industry Expertise:</h6>
+            <p>Healthcare, Hospitality, Conglomerates, Real Estate, PE/VC, Investment development, Retail, Education, Financial Services, Banking.</p>
 </div>
 <ul class="socials"> <li><a href="https://www.linkedin.com/in/abhishek-y-singh-29026912" target="_blank"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
 </div>
