--- a/team2.html
+++ b/team2.html
@@ -29,10 +29,17 @@
             <div class="large-6 columns">
             <div class="team_text">
     <h2> Karun Mehra </h2>
-    <h6 style="color: #2275B8">SENIOR ASSOCIATE</h6>
-    <p>Karun is a graduate from Christ University Bangalore, where he has completed his BBA Finance and Accountancy in 2017. He is also a qualified chartered accountant from the Association of Chartered Certified Accountants (ACCA) UK. In his college days, he led his department in various Business Fest’s and won a series of accolades across India from prestigious institutions such as St. Xavier’s Kolkata and IIM Indore. He was also a delegate represent in the MUN circuit in India. 
-Karun is an avid basketball player. He represented his school as the Sports Secretary and captained the basketball team as a CBSE Indian National Level player. Apart from Sports, he loves singing & playing the guitar. He has had the honor of performing for Padma Shri Malathi K Holla, India’s International Paralympian, who has won over 300 medals. 
-His love for networking has helped him grow into a Senior Associate with Peergrowth today. </p>
+    <h4 style="color: #2275B8">SENIOR ASSOCIATE</h4>
+    <p>Karun was born and raised in Dubai. He thrives on building relationships and making things happen. His journey with Peergrowth has taught him how important it is to pursue what you are truly passionate about. The ability to streamline searches coupled with the passion to create meaningful relationships & a quick turnaround for clients has fast tracked his professional growth at Peergrowth. He has successfully sourced top talent for some interesting & complex C-level mandates within across GCC, North America and Indian subcontinent. He is always open for a discussion whether one is actively or passively looking at new opportunities.<br>
+
+During weekends, Karun is busy making music and playing sports.</p>
+<br>
+<h6 style="color: #eee">Education Qualification:</h6>
+<p> - BBA Finance and Accountancy, Christ University, Bangalore.<br>
+ - Qualified Chartered Accountant from the Association of Chartered Certified Accountants (ACCA), UK.</p>
+ <br>
+<h6 style="color: #eee">Industry Expertise:</h6>
+<p>Healthcare, Aviation, Real Estate, Sovereign Funds, Hospitality and Conglomerates.</p>
 </div>
 <ul class="socials"> <li><a href="https://www.linkedin.com/in/karun-mehra-238907150" target="_blank"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
 </div>
