--- a/team4.html
+++ b/team4.html
@@ -30,18 +30,18 @@
             <div class="team_text">
     <h2>Elizabeth James </h2>
     <h6 style="color: #2275B8">Research Analyst</h6>
-    <p>Born in God's own country and raised in Dubai, Elizabeth finished her high school in Dubai and then
-studied English literature in Kerala. But soon she realized the land of opportunities was where she
-wanted to be. Back in Dubai, she completed her master's degree in Human resource and then joined
-team Peergrowth as an intern.
-In her current role as a Research Analyst, Elizabeth focuses on qualitative and quantitative research. She
-is also involved in the whole recruitment process to ensure the client and the candidate receive high-
-quality service at all times. She is a strong believer in building relationships and offering excellent service
-which she thinks is of paramount importance.
+    <p>Elizabeth was born and raised in Dubai, while doing her Masters within Human resources she realized her true passion was connecting with people. She started with Peergrowth as a Research analyst and have quickly come up the curve to manage mandates on her own. Being inquisitive in nature, she loves connecting the dots which makes finding people and learning more about them come naturally to her.  In a short span of time, she has been able to create a name and leave an impact after each conversation she is had.<br>
 
-Hardworking and optimist in her outlook, Elizabeth enjoys interacting with people and making a positive
-contribution to their recruitment journey. When not at her desk, she enjoys her time with books and
-family. </p>
+On a lighter note, internally we all refer to her as “Sherlock” as she loves finding new information be it professional or personal.<br>
+
+During weekends, she enjoys spending quality time with her family, in reading books and cooking. She is the go-to person for getting breakfast for the team whenever we miss home food!!</p>
+<br>
+<h6 style="color: #eee">Education Qualification:</h6>
+<p> -Master's in Human Resource, Jaipur National University, India.<br>
+ - Bachelor of Arts in English Literature, University of Kerala, India</p>
+ <br>
+<h6 style="color: #eee">Industry Expertise:</h6>
+<p>Retail, Education, Logistics, Healthcare, Conglomerates.</p>
 </div>
 <ul class="socials"> <li><a href="https://www.linkedin.com/in/elizabeth-james-3097a5145/" target="_blank"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
 </div>
