--- a/team3.html
+++ b/team3.html
@@ -29,16 +29,18 @@
             <div class="large-6 columns">
             <div class="team_text">
     <h2> Bhavna Kapoor</h2>
-    <h6 style="color: #2275B8">Engagement Manager</h6>
-    <p>Bhavna is an enthusiastic recruiter who believes that at the heart of performance and success of any team or organization, lies the quality of its people. In her 17 years of experience, she has worked across India , Singapore and UAE with diverse nationalities and cultures. She has an innate ability to build and nurture relationships which have contributed to her learning & success. Bhavna is an Associate CIPD and a post graduate in Human Resource Management from Xavier’s Labour Relations Institute ( XLRI- Jamshedpur) in India.
+    <h4 style="color: #2275B8">Engagement Manager</h4>
+    <p>Bhavna comes from New Delhi, India. She is a recruiter and a networker with a knack for nurturing relationships. While having worked across geographies like India, Singapore and UAE, she has inculcated an exceptional ability to partner closely with people from diverse backgrounds and culture. She takes pride in driving the entire life cycle of recruitment from sourcing, client management till onboarding . She loves connecting with individuals and assisting them in realizing their career aspirations. She believes, “There will be obstacles. There will be doubters. There will be mistakes. But with hard work, there are no limits.”<br>
 
  
 
-She forayed into executive search while working in Singapore and has, since then, worked with some well-established names in the industry. At Peergrowth, Bhavna is building capability in recruiting for junior to middle management across sectors  like Healthcare, Retail, Education, Financial Services, Banking and Hospitality to name a few.
-
- 
-
-Bhavna believes in the power of hard work and perseverance. When not working, she enjoys reading, playing board games, travelling and honing her culinary skills. </p>
+When not recruiting she is probably building jigsaws, honing her culinary skills, reading or traveling.</p>
+<br>
+<h6 style="color: #eee">Education Qualification:</h6>
+<p>Associate CIPD, Certificate in HRM from XLRI-Jamshedpur, India</p>
+<br>
+<h6 style="color: #eee">Industry Expertise:</h6>
+<p>Healthcare, Retail, Education, Financial Services, Banking and Hospitality.</p>
 </div>
 <ul class="socials"> 
 <li><a href="https://www.linkedin.com/in/bhavna-kapoor-b5309334/" target="_blank"><i class='fa fa-3x fa-linkedin'></i></a></li>
