--- a/index.html
+++ b/index.html
@@ -370,8 +370,7 @@
                         <h2 class="colored-title">Abhishek Singh</h2>
                         <h6 style="color: #2275B8">CEO</h6>
                         <p class="how-p">
-                            Abhishek is the Chief Executive Officer of Peergrowth, a trusted management consulting firm based in Dubai.
-            Abhishek has rich experience in leadership hiring both as an Executive search professional and an in-house recruiter focusing on Europe, Middle East & India markets. He has been instrumental in closing critical roles across Real Estate, Banking, Financial Services, Hospitality & Consumer with a keen interest in Education & Healthcare.
+                            Abhishek comes from New Delhi, India. He thrives on building relationships and connecting with people from different backgrounds. He truly believes in - “a day without meeting people is a day gone wasted”. He comes with experience in leadership hiring both as an Executive search professional and an in-house recruiter focusing on Europe, Middle East & India markets. He has been instrumental in closing critical roles for multiple clients across industries.
                         </p>
                         <p class="how-p">
                             <ul class="socials">
@@ -397,7 +396,7 @@
                         <h2 class="colored-title">Bhavna Kapoor</h2>
                         <h6 style="color: #2275B8">Engagement Manager</h6>
                          <p class="how-p">
-                            Bhavna is an enthusiastic recruiter who believes that at the heart of performance and success of any team or organization, lies the quality of its people. In her 17 years of experience, she has worked across India , Singapore and UAE with diverse nationalities and cultures. She has an innate ability to build and nurture relationships which have contributed to her learning & success. Bhavna is an Associate CIPD and a post graduate in Human Resource Management from Xavier’s Labour Relations Institute ( XLRI- Jamshedpur) in India.
+                            Bhavna comes from New Delhi, India. She is a recruiter and a networker with a knack for nurturing relationships. While having worked across geographies like India, Singapore and UAE, she has inculcated an exceptional ability to partner closely with people from diverse backgrounds and culture. She takes pride in driving the entire life cycle of recruitment from sourcing, client management till onboarding . She loves connecting with individuals and assisting them in realizing their career aspirations. She believes, “There will be obstacles. There will be doubters. There will be mistakes. But with hard work, there are no limits.”
                         </p>
                         <p class="how-p">
                              <ul class="socials">
@@ -424,7 +423,7 @@
                         <h2 class="colored-title">Karun Mehra</h2>
                         <h6 style="color: #2275B8">SENIOR ASSOCIATE</h6>
                         <p class="how-p">
-                            Karun is a graduate from Christ University Bangalore, where he has completed his BBA Finance and Accountancy in 2017. He is also a qualified chartered accountant from the Association of Chartered Certified Accountants (ACCA) UK. In his college days, he led his department in various Business Fest’s and won a series of accolades across India from prestigious institutions such as St. Xavier’s Kolkata and IIM Indore. He was also a delegate represent in the MUN circuit in India. 
+                            Karun was born and raised in Dubai. He thrives on building relationships and making things happen. His journey with Peergrowth has taught him how important it is to pursue what you are truly passionate about. The ability to streamline searches coupled with the passion to create meaningful relationships & a quick turnaround for clients has fast tracked his professional growth at Peergrowth. He has successfully sourced top talent for some interesting & complex C-level mandates within across GCC, North America and Indian subcontinent. He is always open for a discussion whether one is actively or passively looking at new opportunities 
                         </p>
                         <p class="how-p">
                               <ul class="socials">
@@ -453,10 +452,7 @@
                         <h2 class="colored-title">Elizabeth James</h2>
                         <h6 style="color: #2275B8">Research Analyst</h6>
                          <p class="how-p">
-                            Born in God's own country and raised in Dubai, Elizabeth finished her high school in Dubai and then
-                            studied English literature in Kerala. But soon she realized the land of opportunities was where she
-                            wanted to be. Back in Dubai, she completed her master's degree in Human resource and then joined
-                            team Peergrowth as an intern.
+                            Elizabeth was born and raised in Dubai, while doing her Masters within Human resources she realized her true passion was connecting with people. She started with Peergrowth as a Research analyst and have quickly come up the curve to manage mandates on her own. Being inquisitive in nature, she loves connecting the dots which makes finding people and learning more about them come naturally to her.  In a short span of time, she has been able to create a name and leave an impact after each conversation she is had.
                         </p>
                         <p class="how-p">
                            <ul class="socials">                                       
