--- a/index.html
+++ b/index.html
@@ -471,12 +471,12 @@
 
                   <div class="row">
                      <div class="large-6 columns">
-                        <a href="team4.html"><img src="images/%40stock/team4_4.jpg" alt="" style="margin-left: 40%;"></a>
+                        <a href="team4.html"><img src="images/%40stock/team5_5.jpg" alt="" style="margin-left: 40%;"></a>
                         <div class="four spacing"></div>
                     </div>
                     <div class="large-6 columns">
-                        <h2 class="colored-title">Elizabeth James</h2>
-                       <h6 style="color: #2275B8">Research Analyst</h6>
+                        <h2 class="colored-title">Ma. Theresa</h2>
+                       <h6 style="color: #2275B8">Office Assistant</h6>
                         <p class="how-p">
                             <p class="how-p">
                             Born in God's own country and raised in Dubai, Elizabeth finished her high school in Dubai and then
@@ -487,7 +487,7 @@
                             <ul class="socials">
                                         
                                         <li><a href="https://www.linkedin.com/in/elizabeth-james-3097a5145/" target="_blank"><i class='fa fa-linkedin'></i></a></li>
-                                         <a href="team4.html" target="_blank" style="float: right;"><i class='fa fa-expand'></i></a>                                     
+                                         <a href="team5.html" target="_blank" style="float: right;"><i class='fa fa-expand'></i></a>                                     
 
                                     </ul>
                         </p>
