spelling changes in the team bio section

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                         <h2 class="colored-title">Karun Mehra</h2>
                         <h6 style="color: #2275B8">SENIOR ASSOCIATE</h6>
                         <p class="how-p">
-                            Karun was born and raised in Dubai. He thrives on building relationships and making things happen. His journey with Peergrowth has taught him how important it is to pursue what you are truly passionate about. The ability to streamline searches coupled with the passion to create meaningful relationships & a quick turnaround for clients has fast tracked his professional growth at Peergrowth. He has successfully sourced top talent for some interesting & complex C-level mandates within across GCC, North America and Indian subcontinent. He is always open for a discussion whether one is actively or passively looking at new opportunities 
+                            Karun was born and raised in Dubai. He thrives on building relationships and making things happen. His journey with Peergrowth has taught him how important it is to pursue what you are truly passionate about. The ability to streamline searches coupled with the passion to create meaningful relationships & a quick turnaround for clients has fast tracked his professional growth at Peergrowth. He has successfully sourced top talent for some interesting & complex C-level mandates within GCC, across North America and the Indian Sub continent. He is always open for a discussion whether one is actively or passively looking at new opportunities 
                         </p>
                         <p class="how-p">
                               <ul class="socials">
@@ -452,7 +452,7 @@
                         <h2 class="colored-title">Elizabeth James</h2>
                         <h6 style="color: #2275B8">Research Analyst</h6>
                          <p class="how-p">
-                            Elizabeth was born and raised in Dubai, while doing her Masters within Human resources she realized her true passion was connecting with people. She started with Peergrowth as a Research analyst and have quickly come up the curve to manage mandates on her own. Being inquisitive in nature, she loves connecting the dots which makes finding people and learning more about them come naturally to her.  In a short span of time, she has been able to create a name and leave an impact after each conversation she is had.
+                            Elizabeth was born and raised in Dubai, while doing her Masters within Human resources she realized her true passion was connecting with people. She started with Peergrowth as a Research analyst and has quickly come up the curve to manage mandates on her own. Being inquisitive in nature, she loves connecting the dots which makes finding people and learning more about them has come naturally to her.  In a short span of time, she has been able to create a name and leave an impact after each conversation she is had.
                         </p>
                         <p class="how-p">
                            <ul class="socials">                                       
