--- a/team2.html
+++ b/team2.html
@@ -30,7 +30,7 @@
             <div class="team_text">
     <h2> Karun Mehra </h2>
     <h4 style="color: #2275B8">SENIOR ASSOCIATE</h4>
-    <p>Karun was born and raised in Dubai. He thrives on building relationships and making things happen. His journey with Peergrowth has taught him how important it is to pursue what you are truly passionate about. The ability to streamline searches coupled with the passion to create meaningful relationships & a quick turnaround for clients has fast tracked his professional growth at Peergrowth. He has successfully sourced top talent for some interesting & complex C-level mandates within across GCC, North America and Indian subcontinent. He is always open for a discussion whether one is actively or passively looking at new opportunities.<br>
+    <p>Karun was born and raised in Dubai. He thrives on building relationships and making things happen. His journey with Peergrowth has taught him how important it is to pursue what you are truly passionate about. The ability to streamline searches coupled with the passion to create meaningful relationships & a quick turnaround for clients has fast tracked his professional growth at Peergrowth. He has successfully sourced top talent for some interesting & complex C-level mandates within GCC, across North America and the Indian Sub continent. He is always open for a discussion whether one is actively or passively looking at new opportunities.<br>
 
 During weekends, Karun is busy making music and playing sports.</p>
 <br>
