--- a/team4.html
+++ b/team4.html
@@ -30,7 +30,7 @@
             <div class="team_text">
     <h2>Elizabeth James </h2>
     <h6 style="color: #2275B8">Research Analyst</h6>
-    <p>Elizabeth was born and raised in Dubai, while doing her Masters within Human resources she realized her true passion was connecting with people. She started with Peergrowth as a Research analyst and have quickly come up the curve to manage mandates on her own. Being inquisitive in nature, she loves connecting the dots which makes finding people and learning more about them come naturally to her.  In a short span of time, she has been able to create a name and leave an impact after each conversation she is had.<br>
+    <p>Elizabeth was born and raised in Dubai, while doing her Masters within Human resources she realized her true passion was connecting with people. She started with Peergrowth as a Research analyst and has quickly come up the curve to manage mandates on her own. Being inquisitive in nature, she loves connecting the dots which makes finding people and learning more about them has come naturally to her.  In a short span of time, she has been able to create a name and leave an impact after each conversation she is had.<br>
 
 On a lighter note, internally we all refer to her as “Sherlock” as she loves finding new information be it professional or personal.<br>
 
