--- a/team5.html
+++ b/team5.html
@@ -30,18 +30,18 @@
             <div class="team_text">
     <h2>Ma. Theresa</h2>
     <h6 style="color: #2275B8">Office Assistant</h6>
-    <p>Elizabeth was born and raised in Dubai, while doing her Masters within Human resources she realized her true passion was connecting with people. She started with Peergrowth as a Research analyst and have quickly come up the curve to manage mandates on her own. Being inquisitive in nature, she loves connecting the dots which makes finding people and learning more about them come naturally to her.  In a short span of time, she has been able to create a name and leave an impact after each conversation she is had.<br>
+    <p>Maria is a proud Filipino national living in Dubai. Maria is an independent, friendly and energetic person with over 5 years of experience within Sales and Marketing covering industries like Real Estate, Custom Logistics and Shipping back home in Davao, Philippines.  She moved to Dubai in 2017 & since then she has been a part of Peergrowth as an Office Assistant.<br>
 
-On a lighter note, internally we all refer to her as “Sherlock” as she loves finding new information be it professional or personal.<br>
+ 
 
-During weekends, she enjoys spending quality time with her family, in reading books and cooking. She is the go-to person for getting breakfast for the team whenever we miss home food!!</p>
+She is a strong pillar of support for the team and one person we all depend on.<br>
+
+ 
+
+During weekends, she enjoys cooking, socializing and playing Volleyball/Badminton.</p>
 <br>
 <h6 style="color: #eee">Education Qualification:</h6>
-<p> -Master's in Human Resource, Jaipur National University, India.<br>
- - Bachelor of Arts in English Literature, University of Kerala, India</p>
- <br>
-<h6 style="color: #eee">Industry Expertise:</h6>
-<p>Retail, Education, Logistics, Healthcare, Conglomerates.</p>
+<p> BSc in Business Administration, University of the Immaculate Conception, Davao City, Philippines</p>
 </div>
 <ul class="socials"> <li><a href="https://www.linkedin.com/in/elizabeth-james-3097a5145/" target="_blank"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
 </div>
