--- a/index.html
+++ b/index.html
@@ -479,10 +479,7 @@
                        <h6 style="color: #2275B8">Office Assistant</h6>
                         <p class="how-p">
                             <p class="how-p">
-                            Born in God's own country and raised in Dubai, Elizabeth finished her high school in Dubai and then
-                            studied English literature in Kerala. But soon she realized the land of opportunities was where she
-                            wanted to be. Back in Dubai, she completed her master's degree in Human resource and then joined
-                            team Peergrowth as an intern.
+                            Maria is a proud Filipino national living in Dubai. Maria is an independent, friendly and energetic person with over 5 years of experience within Sales and Marketing covering industries like Real Estate, Custom Logistics and Shipping back home in Davao, Philippines.  She moved to Dubai in 2017 & since then she has been a part of Peergrowth as an Office Assistant.
                         </p>
                             <ul class="socials">
                                         
