--- a/team5.html
+++ b/team5.html
@@ -52,7 +52,7 @@ During weekends, she enjoys cooking, socializing and playing Volleyball/Badminto
 </div>
 <p class="action-hint-team">
 <a class="scroll-down" href="team3.html"> 
-<img src="images/svg/back123.png" style=" height: 30px;"> Bhavna Kapoor </a>                       
+<img src="images/svg/back123.png" style=" height: 30px;"> Elizabeth James </a>                       
 </p>
 <!--<p class="action-hint-team-next">
 <a class="scroll-down" href="team4.html"> 
