team bio grammer changes

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                         <h2 class="colored-title">Bhavna Kapoor</h2>
                         <h6 style="color: #2275B8">Engagement Manager</h6>
                          <p class="how-p">
-                            Bhavna comes from New Delhi, India. She is a recruiter and a networker with a knack for nurturing relationships. While having worked across geographies like India, Singapore and UAE, she has inculcated an exceptional ability to partner closely with people from diverse backgrounds and culture. She takes pride in driving the entire life cycle of recruitment from sourcing, client management till onboarding . She loves connecting with individuals and assisting them in realizing their career aspirations. She believes, “There will be obstacles. There will be doubters. There will be mistakes. But with hard work, there are no limits.”
+                            Bhavna comes from New Delhi, India. She is a recruiter and a networker with a knack for nurturing relationships. While having worked across geographies like India, Singapore and UAE, she has inculcated an exceptional ability to partner closely with people from diverse backgrounds and culture. She takes pride in driving the entire life cycle of recruitment from sourcing, client management till onboarding. She loves connecting with individuals and assisting them in realizing their career aspirations. She believes, “There will be obstacles. There will be doubters. There will be mistakes. But with hard work, there are no limits.”
                         </p>
                         <p class="how-p">
                              <ul class="socials">
@@ -452,7 +452,7 @@
                         <h2 class="colored-title">Elizabeth James</h2>
                         <h6 style="color: #2275B8">Research Analyst</h6>
                          <p class="how-p">
-                            Elizabeth was born and raised in Dubai, while doing her Masters within Human resources she realized her true passion was connecting with people. She started with Peergrowth as a Research analyst and has quickly come up the curve to manage mandates on her own. Being inquisitive in nature, she loves connecting the dots which makes finding people and learning more about them has come naturally to her.  In a short span of time, she has been able to create a name and leave an impact after each conversation she is had.
+                            Elizabeth was born and raised in Dubai, while doing her Masters within Human resources she realized her true passion was connecting with people. She started with Peergrowth as a Research analyst and has quickly come up the curve to manage mandates on her own. Being inquisitive in nature, she loves connecting the dots which makes finding people and learning more about them come naturally to her. In a short span of time, she has been able to create a name and leave an impact after each conversation she has had.
                         </p>
                         <p class="how-p">
                            <ul class="socials">                                       
@@ -479,7 +479,7 @@
                        <h6 style="color: #2275B8">Office Assistant</h6>
                         <p class="how-p">
                             <p class="how-p">
-                            Maria is a proud Filipino national living in Dubai. Maria is an independent, friendly and energetic person with over 5 years of experience within Sales and Marketing covering industries like Real Estate, Custom Logistics and Shipping back home in Davao, Philippines.  She moved to Dubai in 2017 & since then she has been a part of Peergrowth as an Office Assistant.
+                            Maria is a proud Filipino national living in Dubai. She is an independent, friendly and energetic person with over 5 years of experience within Sales and Marketing covering industries like Real Estate, Custom Logistics and Shipping back home in Davao, Philippines.  She moved to Dubai in 2017 & since then has been a part of Peergrowth as an Office Assistant.
                         </p>
                             <ul class="socials">
                                         
