--- a/team1.html
+++ b/team1.html
@@ -44,7 +44,7 @@
             <h6 style="color: #eee">Education Qualification:</h6>
             <p> - Advanced Management Course at Judge Business School, Cambridge University.<br>
              - Post-Graduate Diploma in Business Management from International Management Institute, Belgium.<br> 
-             - Bachelors in Hospitality and Restaurant management from Oxford Brookes University, Oxford, United Kingdom.</p>
+             - Bachelors in Hospitality and Restaurant Management from Oxford Brookes University, Oxford, United Kingdom.</p>
              <br>
             <h6 style="color: #eee">Industry Expertise:</h6>
             <p>Healthcare, Hospitality, Conglomerates, Real Estate, PE/VC, Investment development, Retail, Education, Financial Services, Banking.</p>
