--- a/team4.html
+++ b/team4.html
@@ -30,15 +30,15 @@
             <div class="team_text">
     <h2>Elizabeth James </h2>
     <h6 style="color: #2275B8">Research Analyst</h6>
-    <p>Elizabeth was born and raised in Dubai, while doing her Masters within Human resources she realized her true passion was connecting with people. She started with Peergrowth as a Research analyst and has quickly come up the curve to manage mandates on her own. Being inquisitive in nature, she loves connecting the dots which makes finding people and learning more about them has come naturally to her.  In a short span of time, she has been able to create a name and leave an impact after each conversation she is had.<br>
+    <p>Elizabeth was born and raised in Dubai, while doing her Masters within Human resources she realized her true passion was connecting with people. She started with Peergrowth as a Research analyst and has quickly come up the curve to manage mandates on her own. Being inquisitive in nature, she loves connecting the dots which makes finding people and learning more about them come naturally to her. In a short span of time, she has been able to create a name and leave an impact after each conversation she has had.<br>
 
 On a lighter note, internally we all refer to her as “Sherlock” as she loves finding new information be it professional or personal.<br>
 
 During weekends, she enjoys spending quality time with her family, in reading books and cooking. She is the go-to person for getting breakfast for the team whenever we miss home food!!</p>
 <br>
 <h6 style="color: #eee">Education Qualification:</h6>
-<p> -Master's in Human Resource, Jaipur National University, India.<br>
- - Bachelor of Arts in English Literature, University of Kerala, India</p>
+<p> - Master's in Human Resource, Jaipur National University, India.<br>
+ - Bachelor of Arts in English Literature, University of Kerala, India.</p>
  <br>
 <h6 style="color: #eee">Industry Expertise:</h6>
 <p>Retail, Education, Logistics, Healthcare, Conglomerates.</p>
