--- a/team5.html
+++ b/team5.html
@@ -30,7 +30,7 @@
             <div class="team_text">
     <h2>Ma. Theresa</h2>
     <h6 style="color: #2275B8">Office Assistant</h6>
-    <p>Maria is a proud Filipino national living in Dubai. Maria is an independent, friendly and energetic person with over 5 years of experience within Sales and Marketing covering industries like Real Estate, Custom Logistics and Shipping back home in Davao, Philippines.  She moved to Dubai in 2017 & since then she has been a part of Peergrowth as an Office Assistant.<br>
+    <p>Maria is a proud Filipino national living in Dubai. She is an independent, friendly and energetic person with over 5 years of experience within Sales and Marketing covering industries like Real Estate, Custom Logistics and Shipping back home in Davao, Philippines.  She moved to Dubai in 2017 & since then has been a part of Peergrowth as an Office Assistant.<br>
 
  
 
